fix(player): hide scrollbar for firefox
 #7

--- a/content/css/crunchyroll.episode.css
+++ b/content/css/crunchyroll.episode.css
@@ -84,6 +84,10 @@ html[ic_scrollbar='true'] ::-webkit-scrollbar {
   width: 0;
 }
 
+html[ic_scrollbar='true'] {
+  scrollbar-width: none;
+}
+
 /* header */
 header {
   z-index: 3;
